--- a/style/media-query.css
+++ b/style/media-query.css
@@ -1,12 +1,13 @@
 @charset "UTF-8";
 
-@media screen and (min-width: 768px) and (max-width: 992px) {
+@media screen and (min-width: 768px) and (max-width: 992px) { /*TABLET*/
    body{
     background-image: linear-gradient(to top, #49a092, #5f2c82);
    }
    
     section#login{
         width: 80vw;
+        height: 280PX;
     }
 
     section#login > div#imagem{
@@ -21,12 +22,13 @@
     }
 }
 
-@media screen and (min-width: 992px) {
+@media screen and (min-width: 992px) { /*DESKTOP*/
     body{
         background-image: linear-gradient(to top, #49a092, #5f2c82);
     }
     section#login{
         width: 950px;
+        height: 315px;
     }
 
     section#login > div#imagem{
@@ -46,5 +48,6 @@
 
     div#formulario > p{
         font-size: 1.1em;
+        margin: 20px 0px;
     }
 }
